chat component completed; title added in chatWindow component

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,6 +7,7 @@
   --grayTimeColor: #686768;
 
   --blueNotification: #5b96f7;
+  --dotColor: #76d45e;
 
   --navbarImageBackgroundColor: #afbbf7;
 }
