enter message button added

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,6 +10,12 @@
   --dotColor: #76d45e;
 
   --navbarImageBackgroundColor: #afbbf7;
+
+  /* chat */
+  --chatMessageBlue: #5b96f7;
+  --chatEnterMessageButtonFontColor: #709ce6;
+  --chatEnterMessageButtonBackgroundColor: #eaf2fe;
+  --chatEnterMessageButtonMarginColor: #f7f9fd;
 }
 body {
   overflow: hidden;
