ui added for the group info and userInfo; route added to fetch groupInfo

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,8 @@
   --grayFontColor2: #7c7c7d;
   --grayTimeColor: #686768;
 
+  --userInfoFontColor: #424242;
+
   --blueNotification: #5b96f7;
   --dotColor: #76d45e;
 
