progressive web app code added; icon changed

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,7 +11,7 @@
   --blueNotification: #5b96f7;
   --dotColor: #76d45e;
 
-  --navbarImageBackgroundColor: #afbbf7;
+  --navbarImageBackgroundColor: #cad2f7;
 
   /* chat */
   --chatMessageBlue: #5b96f7;
